<resources>
    <string name="app_name">Project Turbo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="peshwa_one">Peshwa era was indeed a significant period of cultural growth and development in the city. Lets reiterate the main aspects of the Peshwa era:</string>
    <string name="peshwa_two">After the Decline of the Mughal Empire: In the 18th century, following the weakening of the Mughal Empire, the Maratha chieftains known as Peshwas emerged as de facto rulers over the Maratha territories. They played a crucial role in establishing and consolidating the Maratha Empire.</string>
    <string name="peshwa_three">Cultural Growth and Patronage: The Peshwas were great patrons of arts, literature, and culture. They encouraged the development of Marathi language and literature, leading to a cultural renaissance in Pune. The city became a vibrant hub of Marathi culture and witnessed the flourishing of arts, music, dance, and literature.</string>
    <string name="peshwa_four">Shaniwar Wada: The Shaniwar Wada, a grand palace and fortification, was constructed during the Peshwa era. It became the iconic residence and administrative center of the Peshwas. The Shaniwar Wada remains an important historical landmark in Pune.</string>
    <string name="peshwa_five">Promotion of Marathi Language: Under the Peshwas patronage, Marathi language and literature received a significant boost. Renowned poets, writers, and scholars thrived in Pune, contributing to the growth and enrichment of Marathi literature.</string>
    <string name="peshwa_six">Economic and Trade Hub: Punes strategic location facilitated trade and commerce during the Peshwa era. The citys economic activities flourished, attracting merchants and traders from various regions.</string>
    <string name="peshwa_seven">Maratha Architecture: The Peshwa era witnessed the development of Maratha architecture, blending elements of Islamic and indigenous styles. Punes landscape was adorned with several impressive buildings, forts, and temples during this period.</string>
    <string name="peshwa_eight">Challenges and Decline: While the Peshwa era brought prosperity and cultural advancement to Pune, it also faced challenges, including conflicts with other regional powers and British interference. The eventual defeat of the Marathas in the Third Anglo-Maratha War (1817-1818) marked the decline of the Peshwa rule and the British annexation of their territories.</string>
    <string name="peshwa_nine">The Peshwa era in Pune remains a crucial chapter in the citys history, and its cultural legacy continues to influence and inspire the present-day cultural landscape of Pune.</string>
    <string name="agarkar_one">Agarkar Wada is indeed a historical mansion located in the heart of Pune. However, it was not the residence of Gopal Ganesh Agarkar, the social reformer. The mansion was originally constructed as the residence of the Agarkar family, who were prominent landlords during the Peshwa era.</string>
    <string name="agarkar_two">The Agarkar Wada is an architectural gem and reflects the traditional Wada style of Maratha architecture. It features intricate carvings, wooden pillars, and a central courtyard. The mansion has historical significance and has been recognized as a heritage site.</string>
    <string name="agarkar_three">Gopal Ganesh Agarkar:</string>
    <string name="agarkar_four">Gopal Ganesh Agarkar was an eminent social reformer, educator, and journalist in the 19th century. He was a key figure in the social and educational reforms of Maharashtra and was associated with institutions like Deccan Education Society. However, there is no historical connection between Gopal Ganesh Agarkar and Agarkar Wada in Pune.</string>
    <string name="educational_one">Pune, a city in the Indian state of Maharashtra, has a rich educational legacy and is known as the Oxford of the East due to its numerous educational institutions and academic excellence. The city has played a significant role in the educational landscape of India. Here are some key aspects of Punes educational legacy</string>
    <string name="educational_two">Historical Importance: Pune has a history of being a center of learning for centuries. It was home to the Peshwas, who were influential rulers of the Maratha Empire. During their reign, Pune became a hub for art, culture, and education.</string>
    <string name="educational_three">Educational Institutions: Pune boasts a wide range of educational institutions, including schools, colleges, universities, and research centers. Some of the most renowned institutions in Pune include:</string>
    <string name="educational_four">University of Pune (now Savitribai Phule Pune University): Established in 1948, this is one of the oldest universities in India and offers a diverse range of courses in various disciplines.</string>
    <string name="educationa_five">Indian Institute of Science Education and Research (IISER): IISER Pune is a premier research institution that focuses on interdisciplinary scientific research and education.</string>
    <string name="educational_seven">College of Engineering, Pune (COEP): One of the oldest engineering colleges in Asia, COEP has a rich history and has contributed significantly to engineering education.</string>
    <string name="educational_eight">Fergusson College: Founded in the 19th century, Fergusson College is known for its contributions to arts and science education.</string>
    <string name="educationl_nine">Film and Television Institute of India (FTII): FTII in Pune is a renowned film school that has produced many notable filmmakers and actors.</string>
    <string name="educational_ten">IT and Technology Education: In recent decades, Pune has also become a hub for information technology and software development. Many IT training institutes and technology companies have established a presence in the city.</string>
    <string name="educationl_eleven">Punes educational legacy is a testament to its commitment to learning, innovation, and cultural diversity. The city continues to attract students and scholars from various backgrounds and contributes significantly to India\'s educational landscape.</string>
    <string name="freedom_one">Freedom Struggle</string>
    <string name="free_one">Pune, like many other parts of India, played a significant role in the freedom struggle against British colonial rule. The city was a hotbed of political activism, and many freedom fighters emerged from Pune who contributed to India\'s fight for independence. Here are some key events and figures associated with Pune\'s freedom struggle</string>
    <string name="freedom_two">Tilak and the Home Rule Movement: Bal Gangadhar Tilak, a prominent freedom fighter and nationalist leader, hailed from Pune. He was a strong advocate for Swaraj (self-rule) and played a crucial role in the Indian National Congress. He initiated the Home Rule Movement in 1916, which aimed to demand self-governance within the British Empire.</string>
    <string name="freedom_three">Kesari and Maratha: Tilak started the newspapers Kesari and Maratha, which became important platforms for spreading nationalist ideas and motivating people to join the freedom struggle.</string>
    <string name="freedom_four">Quit India Movement: During the Quit India Movement in 1942, Pune witnessed widespread protests and demonstrations against British rule. The movement aimed to demand an immediate end to British colonialism in India.</string>
    <string name="freedom_five">Agitations and Protests: Pune saw numerous agitations, protests, and strikes against British policies and actions. Students, workers, and various sections of society participated actively in these movements.</string>
    <string name="freedom_six">Social Reformers Contribution: Alongside the political struggle, social reformers in Pune also contributed to the freedom movement. Leaders like Mahatma Jyotirao Phule and Dr. B. R. Ambedkar advocated for social equality and justice, which were intertwined with the larger struggle for independence.</string>
    <string name="freedom_seven">Underground Movements: Many freedom fighters and activists operated underground due to the repressive measures of the British authorities. Secret meetings, pamphlets, and clandestine activities were common.</string>
    <string name="freedom_nine">Savitribai Phule: Savitribai Phule, a social reformer and educator, supported the freedom struggle by advocating for women\'s education and raising awareness about the oppressive nature of British rule.</string>
    <string name="freedom_ten">Punes freedom struggle is a testament to the indomitable spirit of its people who fought against colonial oppression and worked towards achieving an independent India. The legacy of these struggles continues to inspire generations, reminding us of the importance of unity, sacrifice, and dedication in the pursuit of freedom and justice.</string>
    <string name="ganesh_one">Ganesh Chaturthi</string>
    <string name="ganesh_two">Ganesh Chaturthi holds special significance in Pune, as the city is known for its grand and elaborate celebrations of this festival. Here\'s a closer look at how Ganesh Chaturthi is celebrated in Pune:</string>
    <string name="ganesh_three">Elaborate Ganesh Idols: Pune is renowned for its artistic and intricate Ganesh idols. Skilled artisans craft these idols, ranging from small household idols to massive ones for public pandals. The idols often feature creative themes, designs, and decorations.</string>
    <string name="ganesh_four">Pandals and Processions: Various public pandals (temporary structures) are set up across the city to house the Ganesh idols. These pandals become the focal points of celebrations, attracting thousands of devotees. Colorful decorations, lights, and cultural programs are organized at these pandals. There are processions with the idol on the streets, accompanied by music and dance.</string>
    <string name="ganesh_five">Guruji Talim Mandal: The Ganeshotsav organized by Guruji Talim Mandal is one of the oldest and most revered in Pune. The Mandal was founded in 1887, making it one of the city\'s pioneering Ganeshotsav mandals. Their celebrations are known for their traditional approach and cultural activities.</string>
    <string name="ganesh_six">Art and Craft Competitions: Many educational institutions and cultural organizations organize art and craft competitions, where people of all ages can showcase their creativity by making eco-friendly idols and decorations.</string>
    <string name="ganesh_seven">Visarjan (Immersion): On the last day of the festival, the idols are taken in grand processions for immersion in water bodies like rivers, lakes, and the sea. Pune has several immersion points, and the processions are accompanied by dancing, drumming, and chanting.</string>
    <string name="ganesh_eight">Community Involvement: Ganesh Chaturthi brings the community together, fostering a sense of unity and belonging. Many housing societies and neighborhoods organize their own celebrations, creating a lively and festive atmosphere.</string>
    <string name="ganesh_nine">Ganesh Chaturthi in Pune is more than a religious celebration – it\'s a cultural extravaganza that showcases the city\'s creativity, devotion, and love for art. The festival continues to evolve, incorporating modern sensibilities while preserving its traditional essence.</string>
</resources>