<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ganesh_chaturti">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#deb887"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganesh_one"
            android:fontFamily="@font/yatra"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#344747"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_two"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_three"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_four"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_five"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_six"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_seven"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_eight"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/ganesh_nine"
            android:layout_marginBottom="20sp"/>
    </LinearLayout>

</ScrollView>