<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF2CD"
    tools:context=".Agarkar_Wada">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFF2CD"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agarkar Wada"
            android:fontFamily="@font/yatra"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#e4731e"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/agarkar_one"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/agarkar_two"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/agarkar_three"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginBottom="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotu"
            android:text="@string/agarkar_four"
            android:layout_marginBottom="20sp"/>
    </LinearLayout>

</ScrollView>